add_library(MathFunctions MathFunctions.cpp)
option(USE_MYMATH "Use tutorial provided math implementation" ON)
if (USE_MYMATH)
  add_library(SqrtLibrary mysqrt.cpp)
  target_compile_definitions(MathFunctions PRIVATE "USE_MYMATH")
  target_link_libraries(SqrtLibrary PRIVATE tutorial_compiler_flags)
endif()
target_include_directories(MathFunctions INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(MathFunctions PRIVATE SqrtLibrary tutorial_compiler_flags)